--- a/newindex.html
+++ b/newindex.html
@@ -117,14 +117,14 @@ footer{
     cursor: pointer;
     width: 100px;
     height: 40px;
-    border-radius: 3px;
+    /*border-radius: 3px;*/
 }
 
 .justbutton{
     cursor: pointer;
     width: 100px;
     height: 20px;
-    border-radius: 3px;
+    /*border-radius: 3px;*/
     font-size:xx-small;
 }
 
