--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 Unit 15: <input type="checkbox" class="realcheckbox" name="unit" value="15"><br>
               </div>
               <div>
-                <!--전체유닛: <input type="checkbox" class="realcheckbox" name="unit" value="16">-->
+                <hr>전체유닛: <input type="checkbox" class="realcheckbox" name="unit" value="16">
               <hr>
               <input type="button" class="realbutton" value="선택완료" name="choose" onclick="Getunits()">
               <br><br>
