--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <iframe id="mainframe" style="display:none"></iframe>
             </article>
             <article class="article3" id="sub">
-                    <div>Welcome to Hansol Plus English Phoincs Learning Play!!</div>
+                    <div>Welcome to MiraeN EduPlus English Phoincs Learning Play!!</div>
             </article>
             <article class="article4" id="sbutton">
                 <input class="realbutton" type="button" id="startstudy" value="학습시작" onclick="StartStudy()">
