--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header2">
         <div>
             <img src="HSP2.PNG" width="100px" height="40px" style="vertical-align: center;">
-            Welcome to Hansol Plus English Phonics Play!!
+            Welcome to MiraeN Edu Plus English Phonics Play!!
             <img src="HSP3.PNG" width="100px"height="40px" style="vertical-align: center;">
         </div>
     </header>
